update leidian adaption

--- a/static/index.html
+++ b/static/index.html
@@ -30,8 +30,9 @@
           </div>
           <input type="text" id="ip-input" value={{.ServerIP}}>
           <button id="connserver" disabled>连接</button><br>
-          <button id="idle" disabled>挂机模式</button>      
-          <!-- <button id="toggleFullScreen">全屏</button> -->
+          <button id="idle" disabled>画中画模式</button>      
+          <button id="black" disabled>挂机模式</button>
+          <!-- <button id="mute">静音模式</button> -->
   </div>
 </div>
 
