--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
   </div>
   <div class="button-container">
           <div class="prompt-container">
-            <p id="prompt"> 按下“Ctrl+B”进入控制模式  </p>
+            <p id="prompt"> 按下“Ctrl”进入控制模式  </p>
           </div>
           <input type="text" id="ip-input" value={{.ServerIP}}>
           <button id="connserver" disabled>连接</button><br>
